--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -44,6 +44,18 @@
 				</div>
 
 			</section>
+			<section class="places">
+				<h1>Places</h1>
+				<article>
+					<h2>My home</h2>
+				</article>
+				<article>
+					<h2>Tiny house</h2>
+				</article>
+				<article>
+					<h2>A suite</h2>
+				</article>
+			</section>
 		</div>
 		<footer>
 			<p>Best School</p>
