--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>AirBnB Console</title>
-	<link rel="stylesheet" href="styles/4-common.css">
-	<link rel="stylesheet" href="styles/3-header.css">
-	<link rel="stylesheet" href="styles/3-footer.css">
-	<link rel="stylesheet" href="styles/6-filters.css">
-	<link rel="stylesheet" href="styles/8-places.css">
-	<link rel="icon" href="images/icon.png">
-</head>
-<body>
+<html lang="en">
+	<head>
+		<title>AirBnB clone</title>
+
+		<link rel="stylesheet" href="styles/4-common.css"/>
+		<link rel="stylesheet" href="styles/3-header.css"/>
+		<link rel="stylesheet" href="styles/3-footer.css"/>
+		<link rel="stylesheet" href="styles/6-filters.css"/>
+		<link rel="stylesheet" href="styles/8-places.css"/>
+		<link rel="icon" href="images/icon.png">
+	</head>
+    <body>
 		<header>
 			<div id="header_logo"></div>
 		</header>
@@ -21,12 +21,12 @@
 					<h3>States</h3>
 					<h4>California, Arizona...</h4>
 					<ul class="popover">
-						<li><h2>Arizona:</h2>
+						<li><h2>Arizona</h2>
 							<ul>
 								<li><h4>Page</h4></li>
 								<li><h4>Page2</h4></li>
 							</ul></li>
-						<li><h2>California:</h2>
+						<li><h2>California</h2>
 							<ul>
 								<li><h4>San Francisco</h4></li>
 								<li><h4>Los Altos</h4></li>
@@ -48,51 +48,81 @@
 			<section class="places">
 				<h1>Places</h1>
 				<article>
-					<h2>My home</h2>
-					<div class="price_by_night">$200</div>
+					<div class="headline">
+						<h2>My home</h2>
+						<div class="price_by_night">%200</div>
+					</div>
 					<div class="information">
-						<div class="max_guest">10 Guests</div>
-						<div class="number_rooms">5 Bedroom</div>
-						<div class="number_bathrooms">3 Bathroom</div>
+						<div class="max_guest">
+							<div class="guest_icon"></div>
+							<p>10 Guests</p>
+						</div>
+						<div class="number_rooms">
+							<div class="bed_icon"></div>
+							<p>5 Bedroom</p>
+						</div>
+						 <div class="number_bathrooms">
+							<div class="bath_icon"></div>
+							<p>3 Bathroom</p>
+						</div>
 					</div>
-					<div class="user"><b>Owner:</b> Jonathan Joestar</div>
+					<div class="user"><b>Owner</b>: Jonathan Joestar</div>
 					<div class="description">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						Nam viverra posuere magna, eget iaculis est fermentum vitae. Vivamus non hendrerit nibh, ut placerat elit.
-					</div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    </div>
 				</article>
 				<article>
-					<h2>Tiny house</h2>
-					<div class="price_by_night">$90</div>
+					<div class="headline">
+						<h2>Tiny house</h2>
+						<div class="price_by_night">$90</div>
+					</div>
 					<div class="information">
-						<div class="max_guest">2 Guests</div>
-						<div class="number_rooms">1 Bedroom</div>
-						<div class="number_bathrooms">1 Bathroom</div>
-					</div>
-					<div class="user"><b>Owner:</b> Joseph Joestar</div>
+                        <div class="max_guest">
+                            <div class="guest_icon"></div>
+                            <p>2 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <div class="bed_icon"></div>
+                            <p>1 Bedroom</p>
+                        </div>
+                         <div class="number_bathrooms">
+                            <div class="bath_icon"></div>
+                            <p>1 Bathroom</p>
+                        </div>
+                    </div>
+					<div class="user"><b>Owner</b>: Joseph Joestar</div>
 					<div class="description">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						Nam viverra posuere magna, eget iaculis est fermentum vitae. Vivamus non hendrerit nibh, ut placerat elit.
-					</div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
 				</article>
 				<article>
-					<h2>A suite</h2>
-					<div class="price_by_night">$100</div>
-					<div class="information">
-						<div class="max_guest">5 Guests</div>
-						<div class="number_rooms">2 Bedroom</div>
-						<div class="number_bathrooms">2 Bathroom</div>
+					<div class="headline">
+						<h2>A suite</h2>
+						<div class="price_by_night">$100</div>
 					</div>
-					<div class="user"><b>Owner:</b> Johnny Joestar</div>
+					<div class="information">
+                        <div class="max_guest">
+                            <div class="guest_icon"></div>
+                            <p>5 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <div class="bed_icon"></div>
+                            <p>2 Bedroom</p>
+                        </div>
+                         <div class="number_bathrooms">
+                            <div class="bath_icon"></div>
+                            <p>2 Bathroom</p>
+                        </div>
+                    </div>
+					<div class="user"><b>Owner</b>: Johnny Joestar</div>
 					<div class="description">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						Nam viverra posuere magna, eget iaculis est fermentum vitae. Vivamus non hendrerit nibh, ut placerat elit.
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 					</div>
 				</article>
 			</section>
 		</div>
 		<footer>
-			<p>Best School</p>
+			<p>Holberton School</p>
 		</footer>
 	</body>
 </html>
