--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -50,7 +50,7 @@
 				<article>
 					<div class="headline">
 						<h2>My home</h2>
-						<div class="price_by_night">%200</div>
+						<div class="price_by_night">$200</div>
 					</div>
 					<div class="information">
 						<div class="max_guest">
